--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
@@ -87,15 +87,15 @@
                         <span class="error hide required-ddlOrganization font-weight-bold">Organization Name is Required</span>
 
                     </div>
-                  
-                        <div class="col-md-12">
 
-                            <label class="control-label font-weight-bold">Depot Name</label>
-                            @Html.DropDownList("ddlDepotName", (IEnumerable<SelectListItem>)ViewBag.ddlDepotName, "Select Depot Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                    <div class="col-md-12">
 
-                            <span class="error hide required-ddlDepotName font-weight-bold">Depot Name is Required</span>
-                        </div>
-                   
+                        <label class="control-label font-weight-bold">Depot Name</label>
+                        @Html.DropDownList("ddlDepotName", (IEnumerable<SelectListItem>)ViewBag.ddlDepotName, "Select Depot Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+
+                        <span class="error hide required-ddlDepotName font-weight-bold">Depot Name is Required</span>
+                    </div>
+
                     <div class="col-md-12">
                         <label class="control-label font-weight-bold">Raw Material Name</label>
                         <input type="text" id="rawMaterialName" class="form-control form-control-sm" />
@@ -104,10 +104,20 @@
 
                     </div>
                     @*<div class="form-row">
-                            <label class="control-label font-weight-bold">Expiry Date</label>
-                            <input type="text" id="expairDate" class="form-control form-control-sm datepicker ctr-changed" />
-                            <span class="error hide required-expairDate"> Date is Required</span>
-                        </div>*@
+            <label class="control-label font-weight-bold">Expiry Date</label>
+            <input type="text" id="expairDate" class="form-control form-control-sm datepicker ctr-changed" />
+            <span class="error hide required-expairDate"> Date is Required</span>
+        </div>*@
+                    <div class="col-md-12">
+                        <label for="ddlUnit" class="control-label">UnitName</label>
+                        <select class="form-control form-control-sm" id="ddlUnit">
+                            <option value="Kg">Kg</option>
+                            <option value="Gram">Gram</option>
+                            <option value="Litter">Litter</option>
+                            <option value="MiliLitter">MiliLitter</option>
+                            <option value="Miter">Miter</option>
+                        </select>
+                    </div>
                     <div class="col-md-12">
                         <label for="ddlStatus" class="control-label">Status</label>
                         <select class="form-control form-control-sm" id="ddlStatus">
@@ -147,6 +157,7 @@
         var ddlRawMaterial = $("#ddlRawMaterial");
         var ddlDepotNameforSearch = $("#ddlDepotNameforSearch");
         var ddlStatus = $("#ddlStatus");
+        var ddlUnit = $("#ddlUnit");
 
 
 
@@ -221,7 +232,7 @@
         $("#btnSave").click(function (e) {
 
             e.preventDefault();
-            var data = { depotId: TryParseInt(ddlDepotName.val(), 0), RawMaterialName: rawMaterialName.val(), rawMaterialId: hdmaterialId.val(), Status: ddlStatus.val()  }
+            var data = { depotId: TryParseInt(ddlDepotName.val(), 0), RawMaterialName: rawMaterialName.val(), rawMaterialId: hdmaterialId.val(), Status: ddlStatus.val(), UnitName:ddlUnit.val() }
             if (formValidation() == true) {
                 $.when(postReqWithToken(dataType.applicationJson, dataType.json, "POST", "/AgroConfiguration/SaveRawMaterial", JSON.stringify(data), getToken())).then(function (res, status) {
                     //console.log('respons' + JSON.parse( res));
