--- a/ERPWeb/Views/AgroConfiguration/GetUserInfoList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetUserInfoList.cshtml
@@ -50,24 +50,36 @@
 
                                     <div class="card-body text-sm">
                                         <div class="row" style="margin-top:-15px">
-                                            <div class="col-md-3">
+                                            <div class="col-md-2">
                                                 <label for="ddlUserName" class="control-label">User Name</label>
-
+                                                @Html.DropDownList("ddlUserName", (IEnumerable<SelectListItem>)ViewBag.ddlUserName, "--Select Name--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
                                             </div>
 
+                                            @*<div class="col-md-3">
+            <label for="ddlDepartMentName" class="control-label">DepartMent Name</label>
+            @Html.DropDownList("ddlDepartMentName", (IEnumerable<SelectListItem>)ViewBag.ddlDepartMentName, "--Select Name--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+
+        </div>*@
                                             <div class="col-md-3">
                                                 <label for="ddlDepartMentName" class="control-label">DepartMent Name</label>
+                                                <input type="text" id="ddlDepartMentName" class="form-control form-control-sm" />
 
 
                                             </div>
 
+
+                                            @*<div class="col-md-3">
+            <label for="ddlDesignationName" class="control-label">Designation Name</label>
+            @Html.DropDownList("ddlDesignationName", (IEnumerable<SelectListItem>)ViewBag.ddlDesignationName, "--Select Name--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+
+        </div>*@
                                             <div class="col-md-3">
                                                 <label for="ddlDesignationName" class="control-label">Designation Name</label>
+                                                <input type="text" id="ddlDesignationName" class="form-control form-control-sm" />
 
 
                                             </div>
-
 
 
                                         </div>
@@ -99,13 +111,73 @@
 
 </div>
 
+<div class="modal" id="UserInfoModal" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header alert-secondary">
+                <h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body">
+                <form id="formUserInfo">
+                    <input type="hidden" id="hdUserId" />
+                    <div class="form-row">
+                        <div class="col-md-10">
+                            <label for="txtUserName" class="control-label">User Name</label>
+                            <input type="text" id="txtUserName" class="form-control form-control-sm" />
+
+                        </div>
+
+                        <div class="col-md-10">
+                            <label for="txtDepartMentName" class="control-label">DepartMent Name</label>
+                            <input type="text" id="txtDepartMentName" class="form-control form-control-sm" />
+                        </div>
+
+                        <div class="col-md-10">
+                            <label for="txtDesignationName" class="control-label">Designation Name</label>
+                            <input type="text" id="txtDesignationName" class="form-control form-control-sm" />
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="ddlStatus" class="control-label">Status</label>
+
+                            <select id="ddlStatus" class="form-control form-control-sm select2">
+                                <option value="Active">Active</option>
+                                <option value="InActive">InActive</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+
+
+            </div>
+            <div class="modal-footer btn-light">
+                <div class="col-md-6">
+                    <div id="msg1" class="alert alert-success hide float-left">
+                        Data has been Successfully Saved
+                    </div>
+                    <div id="msg2" class="alert alert-danger hide float-left">
+                        Data has been faild to Save
+                    </div>
+                </div>
+                <button id="btnCancel" type="button" class="btn btn-danger btn-sm float-right"><i class="fas fa-paper-plane " data-dismiss="modal" data-target="#">Cancel</i> </button>
+                <button type="submit" id="btnSave" class="btn btn-success btn-sm float-right"><i class="fas fa-paper-plane"></i> <span id="spanSaveText">Save</span> </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts{
 
     <script type="text/javascript">
 
         var ddlDesignationName = $("#ddlDesignationName");
         var ddlUserName = $("#ddlUserName");
+        var ddlStatus = $("#ddlStatus");
         var ddlDepartMentName = $("#ddlDepartMentName");
+        var txtDesignationName = $("#txtDesignationName");
+        var txtUserName = $("#txtUserName");
+        var txtDepartMentName = $("#txtDepartMentName");
+        var hdUserId = $("#hdUserId");
 
         $(document).ready(function () {
             $('.select2').select2();
@@ -114,7 +186,116 @@
                 theme: 'bootstrap4'
             });
 
+            LoadUserList()
+
         })
+
+        ddlUserName.change(function () {
+
+            LoadUserList();
+        })
+        //ddlDepartMentName.change(function () {
+
+        //    LoadUserList();
+        //})
+        ddlDepartMentName.keyup(function () {
+            LoadUserList();
+        })
+        ddlDesignationName.keyup(function () {
+            LoadUserList();
+        })
+        ddlDesignationName.change(function () {
+
+            LoadUserList();
+        })
+
+        function LoadUserList() {
+
+            var data = { flag: "View", userId: TryParseInt(ddlUserName.val(), 0), departmentName: ddlDepartMentName.val(), designation: ddlDesignationName.val(), id: 0 };
+
+            $.when(getReqWithData('html', 'GET', '/AgroConfiguration/GetUserInfoList', data)).then(function (res, status) {
+                console.log(status);
+                if (status === "success") {
+                    $("#dataContainer").fadeOut('500', function () {
+                        $("#dataContainer").empty();
+                        $("#dataContainer").append(res).fadeIn('500');
+                    });
+                }
+            }).fail(function (error) {
+                console.log(error);
+            });
+        }
+
+        function OpenModal() {
+
+            $("#spanSaveText").text('Save');
+            $("#UserInfoModal").modal("show");
+
+        }
+
+        $(document).on("click", "a.data-edit-item-UserId", function (e) {
+
+            e.preventDefault()
+            debugger;
+
+            var row = $(this).parent().parents('tr');
+
+            console.log(row);
+            var username = row.find('td:eq(2)').html();
+            var departmentName = row.find('td:eq(3)').html();
+            var designation = row.find('td:eq(4)').html();
+            var hid = row.find('td:eq(1)').html();
+            var Status = row.find('td:eq(5)').html();
+
+
+
+            ddlStatus.val(Status);
+            ddlStatus.trigger("change");
+
+            hdUserId.val(hid);
+            console.log(hdUserId.val());
+            console.log(hid);
+
+            txtUserName.val(username);
+            txtUserName.trigger("change");
+
+            txtDepartMentName.val(departmentName);
+            txtDepartMentName.trigger("change");
+
+            txtDesignationName.val(designation);
+            txtDesignationName.trigger("change");
+
+
+            OpenModal();
+            $("#spanModalHead").text('Update UserInfo');
+            $("#spanSaveText").text('Update');
+        })
+
+        $("#btnSave").click(function (e) {
+
+            e.preventDefault();
+            debugger;
+            var data = { userId: TryParseInt(hdUserId.val(), 0), UserName: txtUserName.val(), Status: ddlStatus.val(), DepartmentName: txtDepartMentName.val(), Designation: txtDesignationName.val() }
+
+            if (true) {
+                $.when(postReqWithToken(dataType.applicationJson, dataType.json, "POST", "/AgroConfiguration/UpdateUserInfoList", JSON.stringify(data), getToken())).then(function (res, status) {
+
+                    console.log(status);
+                    if (res == true) {
+                        message("#msg1", "#UserInfoModal");
+
+                    }
+                    else {
+                        message("#msg2");
+                    }
+
+                })
+
+            }
+
+        })
+
+
     </script>
 
 
