--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
@@ -112,6 +112,7 @@
                     <div class="col-md-12">
                         <label for="ddlUnit" class="control-label">UnitName</label>
                         <select class="form-control form-control-sm" id="ddlUnit">
+                            <option value="">--Select Unit--</option>
                             <option value="Kg">Kg</option>
                             <option value="Gram">Gram</option>
                             <option value="Litter">Litter</option>
@@ -140,8 +141,8 @@
                         Data has been faild to Save
                     </div>
                 </div>
-                <button id="btnCancel" type="button" class="btn btn-danger float-right"><i class="fas fa-paper-plane " data-dismiss="modal" data-target="#">Cancel</i> </button>
-                <button type="submit" id="btnSave" class="btn btn-success float-right"><i class="fas fa-paper-plane"></i> <span id="spanSaveText">Save</span> </button>
+                <button id="btnCancel" type="button" class="btn btn-sm btn-outline-danger float-right"><i class="fas fa-paper-plane " data-dismiss="modal" data-target="#">Cancel</i> </button>
+                <button type="submit" id="btnSave" class="btn btn-sm btn-outline-success float-right"><i class="fas fa-paper-plane"></i> <span id="spanSaveText">Save</span> </button>
             </div>
         </div>
     </div>
