--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
@@ -65,11 +65,11 @@
                     <input type="hidden" id="hdRawmaterialSupplierId" />
                     <div class="form-row">
                         @*<div class="form-group col-md-12">
-                            <label for="ddlOrganizationName" class="control-label">OrganizationName</label>
-                            @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                            <span class="error hide required-organizatinName font-weight-bold">Input OrganizatinName!</span>
-                            <span class="error hide duplicate-organizatinName font-weight-bold">Already OrganizatinName Exist!</span>
-                        </div>*@
+            <label for="ddlOrganizationName" class="control-label">OrganizationName</label>
+            @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+            <span class="error hide required-organizatinName font-weight-bold">Input OrganizatinName!</span>
+            <span class="error hide duplicate-organizatinName font-weight-bold">Already OrganizatinName Exist!</span>
+        </div>*@
                         <div class="form-group col-md-12">
                             <label for="ddlSupplierName" class="control-label">Supplier Name</label>
                             <input type="text" id="ddlSupplierName" class="form-control form-control-sm" />
@@ -84,6 +84,21 @@
                             <label for="ddlAddress" class="control-label">Address</label>
                             <input type="text" id="ddlAddress" class="form-control form-control-sm" />
                         </div>
+
+                        <div class="form-group col-md-12">
+                            <label for="ddlTradeLicense" class="control-label">TradeLicense</label>
+                            <input type="text" id="ddlTradeLicense" class="form-control form-control-sm" />
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="ddlTIN" class="control-label">TIN</label>
+                            <input type="text" id="ddlTIN" class="form-control form-control-sm" />
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="ddlBIN" class="control-label">BIN</label>
+                            <input type="text" id="ddlBIN" class="form-control form-control-sm" />
+                        </div>
+
+
                         <div class="form-group col-md-12">
                             <label for="ddlStatus" class="control-label">Status</label>
                             <select class="form-control form-control-sm" id="ddlStatus">
@@ -127,6 +142,10 @@
         var ddlMobileNumber = $("#ddlMobileNumber");
         var ddlAddress = $("#ddlAddress");
 
+        var ddlTradeLicense = $("#ddlTradeLicense");
+        var ddlTIN = $("#ddlTIN");
+        var ddlBIN = $("#ddlBIN");
+
         $(document).ready(function () {
             $('.select2').select2();
 
@@ -169,7 +188,7 @@
             $(".error").addClass("hide");
             if (formValidation() == true) {
                 debugger;
-                var data = JSON.stringify({ RawMaterialSupplierId: TryParseInt(hdRawmaterialSupplierId.val(), 0), RawMaterialSupplierName: ddlSupplierName.val(), MobileNumber: ddlMobileNumber.val(), Address: ddlAddress.val(), Status: ddlStatus.val() });
+                var data = JSON.stringify({ RawMaterialSupplierId: TryParseInt(hdRawmaterialSupplierId.val(), 0), RawMaterialSupplierName: ddlSupplierName.val(), MobileNumber: ddlMobileNumber.val(), Address: ddlAddress.val(), TradeLicense: ddlTradeLicense.val(), TIN: ddlTIN.val(), BIN: ddlBIN.val(), Status: ddlStatus.val() });
                 console.log(data);
                 $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveRawMaterialSupplier', data, getToken())).then(function (res, status) {
                     console.log(status);
@@ -268,6 +287,10 @@
             hdRawmaterialSupplierId.val('0');
             ddlMobileNumber.val("");
             ddlAddress.val("");
+
+            ddlTradeLicense.val("");
+            ddlTIN.val("");
+            ddlBIN.val("");
 
         }
 
