--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialSupplierPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialSupplierPartialView.cshtml
@@ -17,6 +17,9 @@
                     <th style="vertical-align:middle">Mobile Number</th>
                     <th style="vertical-align:middle">Address</th>
                     <th style="vertical-align:middle">EntryUser</th>
+                    <th style="vertical-align:middle">TradeLicense</th>
+                    <th style="vertical-align:middle">TIN</th>
+                    <th style="vertical-align:middle">BIN</th>
                     <th style="vertical-align:middle">Status</th>
                     <th style="vertical-align:middle">Action</th>
                 </tr>
@@ -33,7 +36,10 @@
                         <td class="hide">@item.OrganizationName</td>
                         <td class="text-center">@item.RawMaterialSupplierName</td>
                         <td class="text-center">@item.MobileNumber</td>
-                        <td class="text-center">@item.Address</td>
+                        <td class="text-center">@item.Address</td> 
+                        <td class="text-center">@item.TradeLicense</td> 
+                        <td class="text-center">@item.TIN</td> 
+                        <td class="text-center">@item.BIN</td> 
                         <td class="text-center">@item.UserName</td>
                         <td class="text-center">@item.Status</td>
                         <td class="text-center">
