--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
@@ -226,6 +226,10 @@
             var td6 = row.find('td:eq(6)').html();
             var td7 = row.find('td:eq(7)').html();
             var td8 = row.find('td:eq(8)').html();
+            var td9 = row.find('td:eq(9)').html();
+            var td10 = row.find('td:eq(10)').html();
+            var td11 = row.find('td:eq(11)').html();
+            var td12 = row.find('td:eq(12)').html();
 
             hdRawmaterialSupplierId.val(td1);
             ddlOrganizationName.val(td2);
@@ -233,7 +237,10 @@
             ddlSupplierName.val(td4);
             ddlMobileNumber.val(td5);
             ddlAddress.val(td6);
-            ddlStatus.val(td8);
+            ddlTradeLicense.val(td7);
+            ddlTIN.val(td8);
+            ddlBIN.val(td9);
+            ddlStatus.val(td11);
             //ddlStatus.prop("checked", false);
             //if (td6.toLowerCase() === 'active') {
             //    ddlStatus.prop("checked", true);
