--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -10,9 +10,9 @@
                 <th>SL</th>
                 <th class="hide">depotid</th>
                 @*<th>Organization name</th>*@
-                <th>Depot Name</th>
+                @*<th>Depot Name</th>*@
                 <th>Raw Material</th>
-                @*<th>Entry User</th>*@
+                <th>Unitname</th>
                 <th>Status</th>
                 @*<th>Expire Date</th>*@
                 <th class="hide">organizationId</th>
@@ -30,11 +30,11 @@
 
                 <td class="hide">@raw.RawMaterialId</td>
                 <td>@sl</td>
-                <td class="hide">@raw.DepotId</td>
+                @*<td class="hide">@raw.DepotId</td>*@
                 <td class="hide">@raw.OrganizationName</td>
-                <td>@raw.DepotName</td>
+                @*<td>@raw.DepotName</td>*@
                 <td>@raw.RawMaterialName</td>
-                @*<td>@raw.UserName</td>*@
+                <td>@raw.Unit</td>
                 <td>@raw.Status</td>
                 @*<td>@raw.ExpireDate.Value.ToShortDateString()</td>*@
                 <td class="hide">@raw.OrganizationId</td>
