--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
@@ -26,11 +26,11 @@
                         <h4>Search by:</h4>
 
                     </div>
-                    <div class="col-md-3">
+                    @*<div class="col-md-3">
 
                         @Html.DropDownList("ddlDepotNameforSearch", (IEnumerable<SelectListItem>)ViewBag.ddlDepotName, "--Search by Depot--", new { @class = "form-control ctrl-changed select2 select2-danger ctrl-changed" })
 
-                    </div>
+                    </div>*@
                     <div class="col-md-3">
                         @Html.DropDownList("ddlRawMaterial", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterial, "--Search by Material--", new { @class = "form-control ctrl-changed select2 setect2-danger" })
 
@@ -89,13 +89,13 @@
 
                     </div>
 
-                    <div class="col-md-12">
+                    @*<div class="col-md-12">
 
-                        <label class="control-label font-weight-bold">Depot Name</label>
-                        @Html.DropDownList("ddlDepotName", (IEnumerable<SelectListItem>)ViewBag.ddlDepotName, "Select Depot Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+            <label class="control-label font-weight-bold">Depot Name</label>
+            @Html.DropDownList("ddlDepotName", (IEnumerable<SelectListItem>)ViewBag.ddlDepotName, "Select Depot Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
-                        <span class="error hide required-ddlDepotName font-weight-bold">Depot Name is Required</span>
-                    </div>
+            <span class="error hide required-ddlDepotName font-weight-bold">Depot Name is Required</span>
+        </div>*@
 
                     <div class="col-md-12">
                         <label class="control-label font-weight-bold">Raw Material Name</label>
@@ -120,6 +120,7 @@
                 <option value="Miter">Miter</option>
             </select>
         </div>*@
+                    <input type="hidden" id="hdunitId" />
                     <div class="col-md-12">
                         <label for="ddlUnit" class="control-label font-weight-bold">Unit Name</label>
                         @Html.DropDownList("ddlUnit", (IEnumerable<SelectListItem>)ViewBag.ddlUnit, "--Select Unit--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
@@ -158,13 +159,14 @@
 
     <script type="text/javascript">
         var hdmaterialId = $("#hdmaterialId");
-        var ddlDepotName = $("#ddlDepotName");
+        var hdunitId = $("#hdunitId");
+        //var ddlDepotName = $("#ddlDepotName");
        // var ddlOrganization = $("#ddlOrganization");
         //var expairDate = $("#expairDate");
         var remarks = $("#remarks");
         var rawMaterialName = $("#rawMaterialName");
         var ddlRawMaterial = $("#ddlRawMaterial");
-        var ddlDepotNameforSearch = $("#ddlDepotNameforSearch");
+       // var ddlDepotNameforSearch = $("#ddlDepotNameforSearch");
         var ddlStatus = $("#ddlStatus");
         var ddlUnit = $("#ddlUnit");
 
@@ -208,18 +210,14 @@
 
 
         })
-        ddlDepotNameforSearch.change(function () {
 
-            loadRawMaterial();
-
-        })
         ddlRawMaterial.change(function () {
             loadRawMaterial();
 
         })
 
         function loadRawMaterial() {
-            data = { flag: 'Search', depotId: TryParseInt(ddlDepotNameforSearch.val(), 0), rawmaterialName: ddlRawMaterial.val() };
+            data = { flag: 'Search',rawmaterialName: ddlRawMaterial.val() };
             $.when(getReqWithData("html", 'Get', '/AgroConfiguration/GetRawMaterial', data)).then(function (res, status) {
                 if (status == "success") {
                     $("#dataContainer").fadeOut("500", function () {
@@ -241,7 +239,7 @@
         $("#btnSave").click(function (e) {
 
             e.preventDefault();
-            var data = { depotId: TryParseInt(ddlDepotName.val(), 0), RawMaterialName: rawMaterialName.val(), rawMaterialId: hdmaterialId.val(), Status: ddlStatus.val(), Unit:ddlUnit.val() }
+            var data = { RawMaterialName: rawMaterialName.val(), rawMaterialId: hdmaterialId.val(), Status: ddlStatus.val(), Unit: ddlUnit.val() }
             if (formValidation() == true) {
                 $.when(postReqWithToken(dataType.applicationJson, dataType.json, "POST", "/AgroConfiguration/SaveRawMaterial", JSON.stringify(data), getToken())).then(function (res, status) {
                     //console.log('respons' + JSON.parse( res));
@@ -277,14 +275,18 @@
             //var td6 = row.find('td:eq(6)').html();
             var td8 = row.find('td:eq(6)').html();
 
-            rawMaterialName.val(td5);
-            remarks.val('');
+            rawMaterialName.val(td3);
+            ddlUnit.val(td4);
+            ddlUnit.trigger("change");
+            ddlStatus.val(td5);
+            ddlStatus.trigger("change");
+            
             //expairDate.val(td6);
             //ddlOrganization.val(td8);
             //ddlOrganization.trigger("change");
 
-            ddlDepotName.val(td2);
-            ddlDepotName.trigger("change");
+            //ddlDepotName.val(td2);
+            //ddlDepotName.trigger("change");
 
             //ddlStatus.val(td6);
 
@@ -304,10 +306,10 @@
             //    $('.required-ddlOrganization').removeClass("hide");
             //    Isvalid = false;
             //}
-            if ($.trim(ddlDepotName.val()) == 0) {
-                $('.required-ddlDepotName').removeClass("hide");
-                Isvalid = false;
-            }
+            //if ($.trim(ddlDepotName.val()) == 0) {
+            //    $('.required-ddlDepotName').removeClass("hide");
+            //    Isvalid = false;
+            //}
             if ($.trim(rawMaterialName.val()) == "") {
                 $('.required-raqMaterialName').removeClass("hide");
                 Isvalid = false;
@@ -321,10 +323,10 @@
         }
         function ClearCtrl() {
             rawMaterialName.val("");
-            remarks.val('');
+            //remarks.val('');
             //expairDate.val('');
             //ddlOrganization.val('');
-            ddlDepotName.val('');
+            //ddlDepotName.val('');
             hdmaterialId.val('0');
 
         }
