--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -320,7 +320,7 @@
                         debugger;
                         //disable("#btnSubmit");
                         //getTargetItemAndItemTypeAndWarehouse();
-                        var info = { FGRId: 0, FinishGoodProductId: TryParseInt(ddlProductName.val(), 0), FGRQty: txtProductQty.val(), FGRUnit: ddlProductunit.val(), Status: ddlStatus.val(), RawMaterialId: TryParseInt(ddlRawMaterialName.val(), 0), FGRRawMaterQty: txtRawMaterialQty.val(), FGRRawMaterUnit: ddlRawMaterialunit.val() };
+                        var info = { FGRId: 0, FinishGoodProductId: TryParseInt(ddlProductName.val(), 0), FGRQty: txtProductQty.val(), UnitId: TryParseInt(ddlUnit.val(), 0), Status: ddlStatus.val(), RawMaterialId: TryParseInt(ddlRawMaterialName.val(), 0), FGRRawMaterQty: txtRawMaterialQty.val(), UnitId: TryParseInt(ddlUnit.val(), 0) };
 
                         var details = [];
                         details.length = 0;
@@ -331,7 +331,7 @@
                                 FGRDetailsId:0,
                                 RawMaterialId: tds.eq(5).html(),
                                 FGRRawMaterQty: tds.eq(2).html(),
-                                FGRRawMaterUnit: tds.eq(3).html()
+                                UnitId: tds.eq(3).html()
 
                             });
                         })
