--- a/ERPWeb/Views/ControlPanel/_GetUsers.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetUsers.cshtml
@@ -26,6 +26,7 @@
                     <th class="hide"></th>
                     <th style="vertical-align:middle">Branch</th>
                     <th class="hide"></th>
+     
                     <th style="vertical-align:middle">Role</th>
                     <th style="vertical-align:middle">Entry User</th>
                     <th style="vertical-align:middle" class="hide">Update User</th>
@@ -60,8 +61,10 @@
                         <td class="hide">@user.OrganizationId</td>
                         <td>@user.OrganizationName</td>
                         <td class="hide">@user.BranchId</td>
-                        <td>@user.BranchName</td>
+                    
+                        <td>@user.DivisionName</td>
                         <td class="hide">@user.RoleId</td>
+
                         <td class="text-center">
                             <span class="badge badge-info">@user.RoleName</span>
                         </td>
