--- a/ERPWeb/Views/ControlPanel/GetAppUserList.cshtml
+++ b/ERPWeb/Views/ControlPanel/GetAppUserList.cshtml
@@ -407,6 +407,8 @@
         $(document).on("click", "a.data-edit-item", function (e) {
             e.preventDefault()
             clearCtrl();
+            console.log("I am here,App User Edit Mode");
+            alert("I am here,App User Edit Mode");
             var row = $(this).parent().parents('tr');
             var td1 = row.find('td:eq(1)').html();
             var td2 = row.find('td:eq(2)').html();
