newRMstock and purchase

--- a/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
@@ -180,7 +180,7 @@
 
         //remove
         $(document).on("click", "a.data-onfly-del", function (e) {
-            //debugger;
+            debugger;
             e.preventDefault();
             var index = $(this).parent().parents('tbody tr').index();
             var tds = $(this).parent().parents('tbody tr').children('td');
